--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Dienstplan
+title:              "R's Dienstplan"
 email:              
-description:        Dienstplan
+description:        Hier siehst Du, wo ich gerade unterwegs bin.
 author:             R
 baseurl:            ""
 url:                "https://rhecher.github.io"
